revert change and adjust config for gh-pages

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl:          /
 
 author:
   name:           'Craig Eley'
-  url:            http://craigeley.com
+  url:            http://craigeley.github.io/fieldnoise-site/
 
 paginate:         5
 
