--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown:         kramdown
 highlighter:      pygments
 
 # Permalinks
-permalink:        pretty
+permalink:        /:month-:day-:year/:title.html
 
 # Setup
 title:            FIELD NOISE
@@ -39,7 +39,7 @@ jekyll-archives:
     - tags
   layout: 'archive'
   permalinks:
-    tag: '/tag/:name/'
+    tag: '/tagged/:name/'
 
 
 ### Prose.io Config
